--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iLanding Bootstrap Template</title>
+  <title>Sistemas Cutipa</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -49,15 +49,15 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="#hero" class="active">Inicio</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#features">Caracteristicas</a></li>
+          <!-- <li><a href="#services">servicios</a></li> -->
+          <li><a href="#pricing">precios</a></li>
+          <li class="dropdown"><a href="#"><span>servicios</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li><a href="#">Facturacion Electronica</a></li>
+              <!-- <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
@@ -65,18 +65,20 @@
                   <li><a href="#">Deep Dropdown 4</a></li>
                   <li><a href="#">Deep Dropdown 5</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              </li> -->
+              <li><a href="#">Asesoria Tecnologica</a></li>
+              <li><a href="#">Asesoria Tributaria</a></li>
+              <li><a href="#">Asesoria Contable</a></li>
+              <li><a href="#">Cursos de TI</a></li>
+              <li><a href="#">Soporte TI</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://appsoluctimyr.pse.pe/" target="_blank">Facturacion Electronica v1.0</a>
+      <a class="btn-getstarted" href="https://appsoluctimyr.pse.pe/" target="_blank">Facturacion Electronica</a>
       <!-- <a class="btn-getstarted" href="index.html#about">Facturacion Electronica v2.0</a> -->
 
     </div>
@@ -1044,8 +1046,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Contacto</h2>
+        <p>Para contactarse con un especialista en Tecnologia puede realizar en el siguiente Formulario</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -1053,8 +1055,9 @@
         <div class="row g-4 g-lg-5">
           <div class="col-lg-5">
             <div class="info-box" data-aos="fade-up" data-aos-delay="200">
-              <h3>Contact Info</h3>
-              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
+              <h3>Informacion Contacto</h3>
+              <p>Somos profesionales integros que le ayudaran en su proceso de innovacion tecnologica, donde primero entendemos sus necesidades
+                 para posterior brindar la mejor solucion para sus necesidades.</p>
 
               <div class="info-item" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
@@ -1062,8 +1065,8 @@
                 </div>
                 <div class="content">
                   <h4>Our Location</h4>
-                  <p>A108 Adam Street</p>
-                  <p>New York, NY 535022</p>
+                  <p>Villa Santa Rosa de Huachipa</p>
+                  <p>MZ B Lote 10 - Lurigancho Chosica</p>
                 </div>
               </div>
 
@@ -1073,8 +1076,8 @@
                 </div>
                 <div class="content">
                   <h4>Phone Number</h4>
-                  <p>+1 5589 55488 55</p>
-                  <p>+1 6678 254445 41</p>
+                  <p>+51 987 639 368</p>
+                  <p>+51 953 253 468</p>
                 </div>
               </div>
 
@@ -1083,9 +1086,9 @@
                   <i class="bi bi-envelope"></i>
                 </div>
                 <div class="content">
-                  <h4>Email Address</h4>
-                  <p>info@example.com</p>
-                  <p>contact@example.com</p>
+                  <h4>Email Address</h4>                  
+                  <p>contacto@sistemascutipa.com</p>
+                  <p>sistemas.cutipa@gmail.com</p>
                 </div>
               </div>
             </div>
@@ -1093,26 +1096,26 @@
 
           <div class="col-lg-7">
             <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
-              <h3>Get In Touch</h3>
-              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
+              <h3>Ponte en Contacto</h3>
+              <p>Para contactarse con un Agente especializado llenar el siguiente Formulario</p>
 
               <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                 <div class="row gy-4">
 
                   <div class="col-md-6">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                    <input type="text" name="name" class="form-control" placeholder="Nombre Completo" required="">
                   </div>
 
                   <div class="col-md-6 ">
-                    <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                    <input type="email" class="form-control" name="email" placeholder="Correo Electronico" required="">
                   </div>
 
                   <div class="col-12">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                    <input type="text" class="form-control" name="subject" placeholder="Asunto" required="">
                   </div>
 
                   <div class="col-12">
-                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                    <textarea class="form-control" name="message" rows="6" placeholder="Descripcion de mensaje..." required=""></textarea>
                   </div>
 
                   <div class="col-12 text-center">
@@ -1120,7 +1123,7 @@
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                    <button type="submit" class="btn">Send Message</button>
+                    <button type="submit" class="btn">Enviar Mensaje</button>
                   </div>
 
                 </div>
