--- a/index.html
+++ b/index.html
@@ -96,23 +96,23 @@
             <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
               <div class="company-badge mb-4">
                 <i class="bi bi-gear-fill me-2"></i>
-                Working for your success
+                Soluciones en Tecnologia Cloud
               </div>
 
               <h1 class="mb-4">
-                Maecenas Vitae <br>
-                Consectetur Led <br>
-                <span class="accent-text">Vestibulum Ante</span>
+                Facturacion Electronica <br>
+                Soluciones Cloud <br>
+                <span class="accent-text">Automatización de Procesos</span>
               </h1>
 
               <p class="mb-4 mb-md-5">
-                Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
-                Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+                Brindamos soluciones agiles para sus Negocio con enfoque innovador.
+                Automazación de procesos, soluciones escalables de TI.
               </p>
 
               <div class="hero-buttons">
-                <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Get Started</a>
-                <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="btn btn-link mt-2 mt-sm-0 glightbox">
+                <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Iniciar Aquí</a>
+                <a href="https://www.youtube.com/watch?v=OG2OqAUSfr8&list=PLIGLY84N6H0x_CgSGCjHV5ffUOglxJYCO" class="btn btn-link mt-2 mt-sm-0 glightbox">
                   <i class="bi bi-play-circle me-1"></i>
                   Play Video
                 </a>
@@ -133,7 +133,7 @@
                   <img src="assets/img/avatar-5.webp" alt="Customer 5" class="avatar">
                   <span class="avatar more">12+</span>
                 </div>
-                <p class="mb-0 mt-2">12,000+ lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+                <p class="mb-0 mt-2">100+ cliente satisfechos en todo el Perú confiando con Sistemas Cutipa</p>
               </div>
             </div>
           </div>
@@ -146,8 +146,8 @@
                 <i class="bi bi-trophy"></i>
               </div>
               <div class="stat-content">
-                <h4>3x Won Awards</h4>
-                <p class="mb-0">Vestibulum ante ipsum</p>
+                <h4>9 años brindando soluciones</h4>
+                <p class="mb-0">Los clientes confian en Nosotros.</p>
               </div>
             </div>
           </div>
